# Rust-Music-Maker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CITest.yml
src/: lib.rs  main.rs
src/music/: note.rs  part.rs  serializable.rs  song.rs  song_editor.rs
src/ui/: choice_ui.rs  note_cli.rs  part_cli.rs  pitch_ui.rs  song_cli.rs  song_edit_cli.rs  song_editor.rs  song_editor_cli.rs
src/wav/: mod.rs
ui/: appwindow.slint  songedit.slint  songselect.slint
