[package]
name = "song-maker"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "song-maker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.14.0"
slint = "1.4.1"

[build-dependencies]
slint-build = "1.4.0"